--- a/01.ipynb
+++ b/01.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -70,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = 2\n",
@@ -83,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -96,7 +97,7 @@
     }
    ],
    "source": [
-    "print x+y, xy"
+    "print (x+y, xy)"
    ]
   },
   {
@@ -109,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = y = 1"
@@ -120,9 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -133,7 +130,7 @@
     }
    ],
    "source": [
-    "print x,y"
+    "print (x,y)"
    ]
   },
   {
@@ -168,9 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -190,9 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -212,9 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -234,14 +225,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.5"
       ]
      },
      "execution_count": 9,
@@ -263,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -285,9 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -314,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -357,9 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "z = 1"
@@ -368,9 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -390,9 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -433,9 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = 2 #10\n",
@@ -445,9 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -459,16 +432,14 @@
     }
    ],
    "source": [
-    "print a & b\n",
-    "print bin(a&b)"
+    "print (a & b)\n",
+    "print (bin(a&b))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -499,9 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -560,9 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -582,9 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -604,14 +569,12 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'010'"
+       "'0o10'"
       ]
      },
      "execution_count": 22,
@@ -626,9 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -642,7 +603,7 @@
     }
    ],
    "source": [
-    "010"
+    "0o10"
    ]
   },
   {
@@ -655,9 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -670,9 +629,9 @@
     }
    ],
    "source": [
-    "print int('010',8)\n",
-    "print int('0xaa',16)\n",
-    "print int('1010',2)"
+    "print (int('010',8))\n",
+    "print (int('0xaa',16))\n",
+    "print (int('1010',2))"
    ]
   },
   {
@@ -685,9 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -699,8 +656,8 @@
     }
    ],
    "source": [
-    "print int(7.7)\n",
-    "print int('7')"
+    "print (int(7.7))\n",
+    "print (int('7'))"
    ]
   },
   {
@@ -713,9 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -735,9 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -772,7 +725,6 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -780,14 +732,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.0\n",
+      "6\n",
       "4.56\n"
      ]
     }
    ],
    "source": [
-    "print round(5.6231) \n",
-    "print round(4.55892, 2)"
+    "print (round(5.6231))\n",
+    "print (round(4.55892, 2))"
    ]
   },
   {
@@ -800,21 +752,19 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.38516480713\n"
+      "5.385164807134504\n"
      ]
     }
    ],
    "source": [
     "c =complex('5+2j')\n",
-    "print abs(c)"
+    "print (abs(c))"
    ]
   },
   {
@@ -827,9 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -856,9 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -871,9 +817,9 @@
     }
    ],
    "source": [
-    "print isinstance(1, int)\n",
-    "print isinstance(1.0,int)\n",
-    "print isinstance(1.0,(int,float))"
+    "print (isinstance(1, int))\n",
+    "print (isinstance(1.0,int))\n",
+    "print (isinstance(1.0,(int,float)))"
    ]
   },
   {
@@ -892,9 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -907,9 +851,11 @@
     }
    ],
    "source": [
-    "print cmp(1,2)\n",
-    "print cmp(2,1)\n",
-    "print cmp(2,2)"
+    "def cmp(a, b):\n",
+    " return (a>b) - (a<b)\n",
+    "print (cmp(1,2))\n",
+    "print (cmp(2,1))\n",
+    "print (cmp(2,2))"
    ]
   },
   {
@@ -922,9 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -936,8 +880,8 @@
     }
    ],
    "source": [
-    "print pow(3,3)\n",
-    "print pow(3,3,5)"
+    "print (pow(3,3))\n",
+    "print (pow(3,3,5))"
    ]
   },
   {
@@ -949,25 +893,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2]\n",
-      "[2, 3, 4, 5, 6, 7, 8]\n",
-      "[2, 10, 18, 26]\n"
+      "[0, 1, 2] [2, 3, 4, 5, 6, 7, 8] [2, 10, 18, 26]\n"
      ]
     }
    ],
    "source": [
-    "print range(3)\n",
-    "print range(2,9)\n",
-    "print range(2,27,8)"
+    "l1 = list(range(3))\n",
+    "l2 = list(range(2,9))\n",
+    "l3 = list(range(2,27,8))\n",
+    "print(l1, l2, l3)"
    ]
   },
   {
@@ -986,29 +927,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type something here and it will be stored in variable abc \tHey\n"
+      "Type something here and it will be stored in variable abc \t1\n"
      ]
     }
    ],
    "source": [
-    "abc = raw_input(\"Type something here and it will be stored in variable abc \\t\")"
+    "abc = input(\"Type something here and it will be stored in variable abc \\t\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1016,7 +953,7 @@
        "str"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,16 +971,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Only integer can be stored in variable abc \t275\n"
+      "Only integer can be stored in variable abc \t1\n"
      ]
     }
    ],
@@ -1053,18 +988,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "str"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,23 +1016,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
